Compiler/tests/typing/bad/testfile-compare-2.rs

fn main() { let s = S { a: 89 }; s < s; }
